syntax = "proto3";

option csharp_namespace = "GrpcTestProject";

import "google/api/annotations.proto";

package gallery;

service Gallery {

    // Create Gallery
    rpc CreateGallery(CreateGalleryRequest) returns (CreateGalleryResponse){}    
    
    // Read all galleries
    rpc ReadGalleries(GetAllRequest) returns (GetAllResponse){}    
    
    // Read single 
    rpc ReadGallery(ReadGalleryRequest) returns (ReadGalleryResponse){}    
    
    // Update
    rpc UpdateGallery(UpdateGalleryRequest) returns (UpdateGalleryResponse){ }

    rpc UpdateGalleriesPhotos(stream AddGalleryPhoto) returns (MultiGalleryResponse){}

    // Delete
    rpc DeleteGallery(DeleteGalleryRequest) returns (DeleteGalleryResponse){}

    rpc GetPhotosByGalleryId(PhotoRequest) returns (PhotosResponse){}

}    

message PhotoRequest {
    int32 id = 1;
}

message PhotosResponse {
    repeated Photo photos = 1;
}

message AddGalleryPhoto {
    string imagePath = 1;
    string name = 2;
    int32 year = 4;
    int32 gallery_id = 5;
}

message Photo {
    int32 id = 1;
    string imagePath = 2;
    string name = 3;
    int32 year = 4;
    int32 gallery_id = 5;
}

message CreateGalleryRequest {
    string name = 1;
    string description = 2;
}

message CreateGalleryResponse {
    int32 id = 1;
}

message ReadGalleryRequest {
    int32 id = 1;
}

message ReadGalleryResponse {
    int32 id = 1;
    string name = 2;
    string description = 3;
}

message GetAllRequest {}

message GetAllResponse {
    repeated ReadGalleryResponse galleries = 1;
}

message UpdateGalleryRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
}
message MultiGalleryResponse {
    repeated UpdateGalleryResponse gallery_response = 1;
}

message UpdateGalleryResponse{
    int32 id = 1;
}

message DeleteGalleryRequest {
    int32 id = 1;
}

message DeleteGalleryResponse {
    int32 id = 1;
}